--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/icon_application"
         android:supportsRtl="true"
+        android:name=".ui.app.MyApplication"
         android:theme="@style/Theme.Elmaref"
         tools:targetApi="31">
 
