connect screen of ui with Quran data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,11 +27,13 @@
 
         <activity
             android:name=".ui.quran.saved.SavedAyahQuranActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
 
         <activity
             android:name=".ui.quran.paged.tfseer.options.share.ShareAyahActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.splash.SplashAppActivity"
             android:exported="true">
@@ -62,10 +64,12 @@
 
         <activity
             android:name=".ui.quran.paged.quran.QuranPagedActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.shalat.compass.CompassActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
